Clean up the app

--- a/labb3-App/index.html
+++ b/labb3-App/index.html
@@ -64,11 +64,11 @@
         <div class="list">
             <h3>Expense List</h3>
             <input  id="chart" type="button" class="submit" value="Chart generator"></input>
-
+            <input  id="show" type="button" class="submit hidden" value="Show"></input>
             <div id = "dateInput">
-                <input id= "startDate" type="date"  name="date" value="dd-mm-yy" > </input> 
-                <input id ="endDate" type="date"  name="date" value="dd-mm-yy" > </input> <br>
-                <input  id="create" type="button" class="submit" value="Generate chart"></input>
+                <input id= "startDate" class ="hidden" type="date"  name="date" value="dd-mm-yy" > </input> 
+                <input id ="endDate" type="date" class ="hidden" name="date" value="dd-mm-yy" > </input> <br>
+                <input  id="create" type="button" class ="hidden" value="Generate chart"></input>
             </div>
 
             <table>
